metadata-objects/extracted/unpackaged/objects/Proforma_Borrador__c.object
<CustomObject>
    <fields>
        <fullName>A3CodeAccount__c</fullName>
        <formula>AccountId__r.ClientCodeA3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código cliente A3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nombre de la cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proforma Borrador (Nombre de la cuenta)</relationshipLabel>
        <relationshipName>Proforma_Borrador1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transportista</label>
        <referenceTo>Carrier__c</referenceTo>
        <relationshipLabel>Proforma Borrador</relationshipLabel>
        <relationshipName>Proforma_Borrador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Fecha de cierre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContratoId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrato</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Proforma Borrador</relationshipLabel>
        <relationshipName>Proforma_Borrador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Descripción</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <label>Ingresos previstos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastCategoryName__c</fullName>
        <label>Categoría de previsión</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IqScore__c</fullName>
        <label>Puntuación de oportunidades</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Justificante_Adjunto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Justificante Adjunto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Precio</fullName>
                </value>
                <value>
                    <fullName>No trabaja el producto</fullName>
                </value>
                <value>
                    <fullName>Contacto erróneo</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NextStep__c</fullName>
        <label>Siguiente paso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderExpirationDateTime__c</fullName>
        <label>Order Expiration Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderStartDateTime__c</fullName>
        <label>Order Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta Principal</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proforma Borrador</relationshipLabel>
        <relationshipName>Proforma_Borrador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Forma de pago</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PaymentMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PercentIVA__c</fullName>
        <label>% IVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pricebook2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lista de precios</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Proforma Borrador</relationshipLabel>
        <relationshipName>Proforma_Borrador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probabilidad (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProformaBorradorNumber__c</fullName>
        <displayFormat>PR-B{000000}</displayFormat>
        <label>ProformaBorradorNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProformaId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proforma</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proforma Borrador</relationshipLabel>
        <relationshipName>Proforma_Borrador</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale15__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Venta a 15º</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <label>Etapa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nuevo</fullName>
                </value>
                <value>
                    <fullName>Análisis</fullName>
                </value>
                <value>
                    <fullName>Propuesta</fullName>
                </value>
                <value>
                    <fullName>Convertido</fullName>
                </value>
                <value>
                    <fullName>Cerrado perdido</fullName>
                </value>
                <value>
                    <fullName>Pendiente Pago</fullName>
                </value>
                <value>
                    <fullName>Pagada</fullName>
                </value>
                <value>
                    <fullName>Proforma enviada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Almacén</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Store</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>Tipo Fiscal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TaxRate</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalOpportunityQuantity__c</fullName>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Business</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Proforma Borrador</label>
    <nameField>
        <label>Nombre de Proforma Borrador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proforma Borrador</pluralLabel>
    <recordTypes>
        <fullName>Bunkering</fullName>
        <active>true</active>
        <label>Bunkering</label>
    </recordTypes>
    <recordTypes>
        <fullName>Estaciones_propias</fullName>
        <active>false</active>
        <label>Estaciones propias</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operador</fullName>
        <active>true</active>
        <label>Operador</label>
    </recordTypes>
    <recordTypes>
        <fullName>Venta_Directa</fullName>
        <active>false</active>
        <label>Venta Directa</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>